--- a/index.html
+++ b/index.html
@@ -164,9 +164,16 @@
     <a href="https://www.tiktok.com/@kleine_lars_yt?_t=ZN-8vpZvqUBJbC&_r=1" target="_blank" class="social-button">My TikTok</a>
   </div>
 
+  <!-- Download Guide Section -->
+  <div class="section">
+    <h1>Need Help?</h1>
+    <p>Download the tutorial guide with the video link!</p>
+    <a href="guide.txt" download="KLKahoot_Guide.txt" class="social-button">📄 Download Guide</a>
+  </div>
+
   <!-- Footer -->
   <footer>
-    <p>⚠️ Use responsibly.</p>
+    <p>⚠️ Use responsibly. Don't use it to annoy others.</p>
   </footer>
 
   <!-- Confetti.js -->
