--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
       position: fixed;
       top: 20px;
       right: 20px;
-      background: #28a745;
-      color: white;
+      background: white;
+      color: black;
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
@@ -135,17 +135,18 @@
     .popup a {
       display: inline-block;
       margin-top: 10px;
-      background: white;
-      color: #28a745;
+      background: #007bff;
+      color: white;
       padding: 8px 12px;
       border-radius: 5px;
       text-decoration: none;
       font-weight: bold;
+      margin: 5px;
       transition: 0.3s;
     }
 
     .popup a:hover {
-      background: #e0e0e0;
+      background: #0056b3;
     }
 
     @keyframes slideIn {
@@ -203,7 +204,8 @@
 
       if (withLinks) {
         popup.innerHTML += `
-          <br><a href="https://discord.gg/TwrZkxMnmP" target="_blank">Discord</a>
+          <br>
+          <a href="https://discord.gg/TwrZkxMnmP" target="_blank">Discord</a>
           <a href="https://www.tiktok.com/@kleine_lars_yt?_t=ZN-8vpZvqUBJbC&_r=1" target="_blank">TikTok</a>
         `;
       }
@@ -212,7 +214,7 @@
 
       setTimeout(() => {
         popup.remove();
-      }, 5000); // blijft 5 seconden
+      }, 5000);
     }
 
     function updatePreview() {
