--- a/index.html
+++ b/index.html
@@ -117,40 +117,60 @@
       text-align: center;
     }
 
+    /* POPUP Styling algemeen */
     .popup {
       position: fixed;
       top: 20px;
       right: 20px;
-      background: #28a745;
-      color: white;
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       font-size: 16px;
-      animation: slideIn 0.5s ease;
+      animation: slideIn 0.5s ease, fadeOut 0.5s ease 4.5s forwards;
       z-index: 9999;
+      max-width: 300px;
       text-align: center;
     }
 
-    .popup a {
-      display: inline-block;
-      margin-top: 10px;
-      background: white;
-      color: #28a745;
-      padding: 8px 12px;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s;
+    /* Speciaal voor de bot launched popup */
+    .popup-success {
+      background: #28a745; /* Groen */
+      color: white;
     }
 
-    .popup a:hover {
-      background: #e0e0e0;
+    /* Speciaal voor de follow popup */
+    .popup-follow {
+      background: white;
+      color: black;
     }
 
     @keyframes slideIn {
       from { opacity: 0; transform: translateX(100%); }
       to { opacity: 1; transform: translateX(0); }
+    }
+
+    @keyframes fadeOut {
+      from { opacity: 1; transform: translateX(0); }
+      to { opacity: 0; transform: translateX(100%); }
+    }
+
+    .popup-button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      margin: 10px 5px 0 5px;
+      border-radius: 5px;
+      font-size: 14px;
+      cursor: pointer;
+      display: inline-block;
+      text-decoration: none;
+      transition: background-color 0.3s, transform 0.3s;
+    }
+
+    .popup-button:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
     }
   </style>
 </head>
@@ -181,38 +201,36 @@
     <a href="https://www.tiktok.com/@kleine_lars_yt?_t=ZN-8vpZvqUBJbC&_r=1" target="_blank" class="social-button">My TikTok</a>
   </div>
 
-  <!-- Download Guide Section -->
-  <div class="section">
-    <h1>Need Help?</h1>
-    <p>Download the tutorial guide with the video link!</p>
-    <a href="guide.txt" download="KLKahoot_Guide.txt" class="social-button">📄 Download Guide</a>
-  </div>
-
   <!-- Footer -->
   <footer>
-    <p>⚠️ Use responsibly. Don't use it to annoy others.</p>
+    <p>⚠️ Use responsibly.</p>
   </footer>
 
   <!-- Confetti.js -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script>
-    function showPopup(message, withLinks = false) {
+    function showPopup(message, type) {
       const popup = document.createElement("div");
-      popup.className = "popup";
-      popup.innerHTML = message;
-
-      if (withLinks) {
-        popup.innerHTML += `
-          <br><a href="https://discord.gg/TwrZkxMnmP" target="_blank">Discord</a>
-          <a href="https://www.tiktok.com/@kleine_lars_yt?_t=ZN-8vpZvqUBJbC&_r=1" target="_blank">TikTok</a>
-        `;
-      }
-
+      popup.className = "popup " + type;
+      popup.innerText = message;
       document.body.appendChild(popup);
-
       setTimeout(() => {
         popup.remove();
-      }, 5000); // blijft 5 seconden
+      }, 5000);
+    }
+
+    function showFollowPopup() {
+      const popup = document.createElement("div");
+      popup.className = "popup popup-follow";
+      popup.innerHTML = `
+        <strong>Follow me!</strong><br><br>
+        <a href="https://discord.gg/TwrZkxMnmP" target="_blank" class="popup-button">Discord</a>
+        <a href="https://www.tiktok.com/@kleine_lars_yt?_t=ZN-8vpZvqUBJbC&_r=1" target="_blank" class="popup-button">TikTok</a>
+      `;
+      document.body.appendChild(popup);
+      setTimeout(() => {
+        popup.remove();
+      }, 5000);
     }
 
     function updatePreview() {
@@ -241,14 +259,8 @@
         colors: ['#00ffea', '#ff00e6', '#f0ff00', '#ff0000']
       });
 
-      showPopup("✅ Bots successfully launched!");
-    });
-
-    // Auto popup after 3 seconds with links
-    window.addEventListener("load", function() {
-      setTimeout(function() {
-        showPopup("🚀 Follow me!", true);
-      }, 3000);
+      showPopup("✅ Bots successfully launched!", "popup-success");
+      setTimeout(showFollowPopup, 2000); // 2 seconden later de Follow popup
     });
   </script>
 
