--- a/index.html
+++ b/index.html
@@ -20,15 +20,6 @@
       to { opacity: 1; }
     }
 
-    @keyframes glitch {
-      0% { transform: none; }
-      20% { transform: skew(0.5deg, 0.5deg); }
-      40% { transform: skew(-0.5deg, -0.5deg); }
-      60% { transform: none; }
-      80% { transform: translate(1px, -1px); }
-      100% { transform: none; }
-    }
-
     .topbar {
       display: flex;
       align-items: center;
@@ -41,11 +32,16 @@
     }
 
     .glitch {
-      position: relative;
-      display: inline-block;
       font-size: 28px;
-      animation: glitch 1s infinite;
       color: black;
+      animation: glitch 1s infinite;
+    }
+
+    @keyframes glitch {
+      0%, 100% { transform: none; }
+      20% { transform: skew(0.5deg, 0.5deg); }
+      40% { transform: skew(-0.5deg, -0.5deg); }
+      80% { transform: translate(1px, -1px); }
     }
 
     .section {
@@ -57,16 +53,13 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
 
-    input, button, a.tutorial {
+    input, button {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
       font-size: 16px;
       border-radius: 5px;
       border: 1px solid #ccc;
-      display: inline-block;
-      text-decoration: none;
-      text-align: center;
     }
 
     button {
@@ -96,19 +89,47 @@
       overflow-y: auto;
     }
 
-    .social-button {
+    .popup {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: #28a745;
+      color: white;
+      padding: 15px 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      font-size: 16px;
+      z-index: 9999;
+      animation: slideIn 0.5s ease, slideOut 0.5s ease 2.5s forwards;
+    }
+
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateX(100%); }
+      to { opacity: 1; transform: translateX(0); }
+    }
+
+    @keyframes slideOut {
+      to { opacity: 0; transform: translateX(100%); }
+    }
+
+    .info-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .info-buttons a {
+      padding: 12px 20px;
       background-color: #007bff;
       color: white;
-      padding: 10px 20px;
       text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
       border-radius: 5px;
-      margin: 10px;
+      font-weight: bold;
       transition: 0.3s;
     }
 
-    .social-button:hover {
+    .info-buttons a:hover {
       background-color: #0056b3;
       transform: scale(1.05);
     }
@@ -118,40 +139,6 @@
       color: #777;
       font-size: 14px;
       text-align: center;
-    }
-
-    .popup {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: white;
-      color: black;
-      padding: 15px 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      font-size: 16px;
-      animation: slideIn 0.5s ease, fadeOut 0.5s ease 4.5s;
-      z-index: 9999;
-    }
-
-    .popup a {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 8px 14px;
-      background-color: #007bff;
-      color: white;
-      border-radius: 5px;
-      text-decoration: none;
-      font-size: 14px;
-    }
-
-    @keyframes slideIn {
-      from { opacity: 0; transform: translateX(100%); }
-      to { opacity: 1; transform: translateX(0); }
-    }
-
-    @keyframes fadeOut {
-      to { opacity: 0; transform: translateX(100%); }
     }
   </style>
 </head>
@@ -171,17 +158,13 @@
       <input type="number" id="count" placeholder="Number of bots" required min="1" max="100">
       <button type="submit">Launch Bots</button>
     </form>
-    <a href="KL_Kahoot_Guide_EN.pdf" download class="tutorial">📄 Download PDF Guide</a>
-    <a href="https://www.youtube.com/watch?v=5Lbd-RyDsAo" target="_blank" class="tutorial">▶️ Watch Tutorial</a>
     <div id="preview"><strong>Bot preview:</strong><br></div>
   </div>
 
-  <!-- Social Section -->
-  <div class="section">
-    <h1>Follow me!</h1>
-    <p>Join my Discord and TikTok!</p>
-    <a href="https://discord.gg/TwrZkxMnmP" target="_blank" class="social-button">My Discord</a>
-    <a href="https://www.tiktok.com/@kleine_lars_yt?_t=ZN-8vpZvqUBJbC&_r=1" target="_blank" class="social-button">My TikTok</a>
+  <!-- Info Buttons -->
+  <div class="info-buttons">
+    <a href="uitleg.pdf" download>📄 Download Guide</a>
+    <a href="https://www.youtube.com/watch?v=5Lbd-RyDsAo" target="_blank">▶️ Watch Tutorial</a>
   </div>
 
   <!-- Footer -->
@@ -192,17 +175,24 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script>
-    function showPopup(message, color = "#28a745", textColor = "white") {
+    function showPopup(message, color = '#28a745', textColor = 'white') {
       const popup = document.createElement("div");
       popup.className = "popup";
+      popup.innerText = message;
       popup.style.background = color;
       popup.style.color = textColor;
-      popup.innerText = message;
       document.body.appendChild(popup);
       setTimeout(() => {
         popup.remove();
       }, 3000);
     }
+
+    // Show welcome popup after 3 seconds
+    window.addEventListener("load", () => {
+      setTimeout(() => {
+        showPopup("👋 Follow me on Discord and TikTok!", "white", "#007bff");
+      }, 3000);
+    });
 
     function updatePreview() {
       const name = document.getElementById("name").value || "Bot";
@@ -222,28 +212,15 @@
 
     document.getElementById("botForm").addEventListener("submit", function(e) {
       e.preventDefault();
+
       confetti({
         particleCount: 200,
         spread: 100,
         origin: { y: 0.6 },
         colors: ['#00ffea', '#ff00e6', '#f0ff00', '#ff0000']
       });
-      showPopup("✅ Bots successfully launched!");
-    });
 
-    // Show "Follow me" popup after 3 seconds
-    window.addEventListener("load", () => {
-      setTimeout(() => {
-        const popup = document.createElement("div");
-        popup.className = "popup";
-        popup.innerHTML = `✨ Follow me on socials!<br>
-          <a href="https://discord.gg/TwrZkxMnmP" target="_blank">Discord</a>
-          <a href="https://www.tiktok.com/@kleine_lars_yt?_t=ZN-8vpZvqUBJbC&_r=1" target="_blank">TikTok</a>`;
-        document.body.appendChild(popup);
-        setTimeout(() => {
-          popup.remove();
-        }, 5000);
-      }, 3000);
+      showPopup("✅ Bots successfully launched!", "#28a745", "white");
     });
   </script>
 
