--- a/index.html
+++ b/index.html
@@ -8,23 +8,20 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #ffffff;
+      background: white;
       margin: 0;
       padding: 40px;
       text-align: center;
     }
-
     .topbar {
       display: flex;
       align-items: center;
       justify-content: center;
       margin-bottom: 20px;
     }
-
     .logo {
       height: 50px;
     }
-
     .container {
       max-width: 500px;
       margin: auto;
@@ -34,7 +31,6 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       text-align: center;
     }
-
     input, button {
       width: 100%;
       padding: 10px;
@@ -43,7 +39,6 @@
       border-radius: 5px;
       border: 1px solid #ccc;
     }
-
     button {
       background-color: #007bff;
       color: white;
@@ -51,18 +46,15 @@
       cursor: pointer;
       transition: 0.3s;
     }
-
     button:hover {
       background-color: #0056b3;
       transform: scale(1.05);
     }
-
     #status {
       margin-top: 15px;
       font-weight: bold;
       color: #333;
     }
-
     .popup {
       position: fixed;
       top: 20px;
@@ -77,7 +69,6 @@
       min-width: 220px;
       text-align: center;
     }
-
     .popup a {
       display: inline-block;
       margin: 5px;
@@ -88,20 +79,16 @@
       border-radius: 5px;
       font-weight: bold;
     }
-
     .popup a:hover {
       background-color: #0056b3;
     }
-
     @keyframes slideIn {
       from { opacity: 0; transform: translateX(100%); }
       to { opacity: 1; transform: translateX(0); }
     }
-
     @keyframes slideOut {
       to { opacity: 0; transform: translateX(100%); }
     }
-
     footer {
       margin-top: 40px;
       font-size: 14px;
@@ -129,22 +116,22 @@
   </footer>
 
   <script>
-    // Popup "Follow me" verschijnt na 3 seconden
+    // Popup "Follow me" verschijnt 3 seconden na laad
     window.addEventListener("load", () => {
       setTimeout(() => {
         const popup = document.createElement("div");
         popup.className = "popup";
         popup.innerHTML = `
-          <h3>👋 Follow me</h3>
+          <h3>Follow me</h3>
           <a href="https://discord.gg/TwrZkxMnmP" target="_blank">Discord</a>
           <a href="https://www.tiktok.com/@kleine_lars_yt?_t=ZN-8vpZvqUBJbC&_r=1" target="_blank">TikTok</a>
         `;
         document.body.appendChild(popup);
-        setTimeout(() => popup.remove(), 5500);
+        setTimeout(() => popup.remove(), 5000);
       }, 3000);
     });
 
-    // Stuur data naar backend
+    // Stuur data naar backend via fetch
     async function sendBots() {
       const pin = document.getElementById("pin").value;
       const name = document.getElementById("name").value;
@@ -157,7 +144,7 @@
       }
 
       try {
-        const response = await fetch("https://<jouw-replit-link>.repl.co/sendBots", {
+        const response = await fetch("/sendBots", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ pin, name, count })
